# filephile

./: Cargo.toml  README.md  example_config.toml
src/: actions.rs  compile_time_settings.rs  directory_tree.rs  helper_types.rs  inputs.rs  logic.rs  main.rs  modes.rs  ui.rs
src/modes/: delete_mode.rs  normal_mode.rs  search_mode.rs
