[package]
name = "fphile"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }

# for mapping actions and names
once_cell = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
fuzzy-matcher = "0.3.7"
crossbeam-channel = "0.5.4"
ctrlc = "3.2.1"
